[workspace]
resolver = "2"
members = [
    "bin/account",
    "bin/ai",
    "bin/content",
    "bin/relation",
    "bin/transform",
    "crates/*",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
async-graphql = "7.0.6"
async-graphql-axum = "7.0.6"
axum = "0.7.5"
anyhow = "1.0.86"
